[package]
name = "rustvault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
rand = "0.10.1"
serde = "1.0"
serde_derive = "1.0"
bincode = "3.0.0"
orion = "0.17.6"
rust-crypto = "0.2"
